fix site header z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -10,6 +10,7 @@
     position: fixed; //fixed header
     width: 100%;
     background: white;
+    z-index: 1;
 }
 
 .site-title {
